# ubuntu-mcp

./: README.md  main.py  opencode.json  pyproject.toml  workshop.yaml
demos/: demo.cast
nginx/: ubuntu-mcp.conf
scripts/: patch_ubq.py
src/ubuntu_mcp/: __init__.py  cli.py  service.py
src/ubuntu_mcp/all/: server.py
src/ubuntu_mcp/bugs/: __init__.py  server.py
src/ubuntu_mcp/merge_requests/: __init__.py  server.py
src/ubuntu_mcp/versions/: __init__.py  server.py
tests/: conftest.py  test_bugs.py  test_cli.py  test_merge_requests.py  test_packages.py  test_service.py  test_versions.py
