[project]
name = "ubuntu-mcp"
version = "0.1.0"
description = "MCP servers for collecting and submitting Ubuntu data via ubq"
requires-python = ">=3.13"
dependencies = [
    "ubq>=0.4.1",
    "mcp[cli]>=1.27.0",
]

[project.scripts]
ubuntu-mcp-bugs = "ubuntu_mcp.bugs.server:main"
ubuntu-mcp-packages = "ubuntu_mcp.packages.server:main"
ubuntu-mcp-versions = "ubuntu_mcp.versions.server:main"
ubuntu-mcp-merge-requests = "ubuntu_mcp.merge_requests.server:main"

[dependency-groups]
format = [
    "ruff>=0.15.12",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "W"]
ignore = ["PLR2004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
